# bytary

./: Cargo.toml  README.md
.github/workflows/: cargo-build-test.yml
src/: builtins.rs  convert.rs  error.rs  format.rs  lib.rs  utils.rs
src/builtins/: test.rs
