[package]
name = "bytary"
version = "0.1.0"
description = "A simple CLI tool for binary data manipulation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Leawind/bytary"
keywords = ["cli", "binary", "hex"]
categories = ["command-line-utilities"]
exclude = ["/.github"]
authors = ["Leawind <leawind@yeah.net>"]
edition = "2024"

[[bin]]
name = "bytary"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
hex = "0.4.3"
pathfinding = "4.14.0"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
